[tool.poetry]
name = "urlshotnener"
version = "0.1.0"
description = ""
authors = ["kacchan822 <hello@kacchan822.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.3"
pydantic-settings = "^2.2.1"
validators = "^0.28.1"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
